fix momentum scrolling on iPhone
 - https://css-tricks.com/snippets/css/momentum-scrolling-on-ios-overflow-elements/

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,7 +43,13 @@ body {
 .body {
   position: fixed;
   width: 100%;
-  overflow-y: auto;
+
+  // fix momentum scrolling on iPhone
+  // overflow-y has to be scroll, not auto
+  // https://css-tricks.com/snippets/css/momentum-scrolling-on-ios-overflow-elements/
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+
   overflow-x: hidden;
   top: $headerHeight;
   bottom: $footerHeight;
